	- added some examples (eg/connect, eg/handle).
	- added AnyEvent::Util::guard.
        - AnyEvent::Util now exports most of its functions.
	- fixed a bug in *_read_chunk, where the callback was called with $self as
          first and second argument.
        - simplified and fixed regex handling in AnyEvent::Handle::*_read_line.
	- fix manpage condvars examples to use new syntax.

3.41 Sun May 11 19:53:13 CEST 2008
	- work around a bug in perl 5.8.8's local. Reported by Yi Ma Mao.

3.4  Sun May 11 00:29:25 CEST 2008
	- complete re-implementation of condvars with a hopefully much mroe useful
          API (backward compatible functions exist but are undocumented).
	- AnyEvent::Handle fully rewritten with a hopefully more powerful API
          (still subject to change).
	- take advantage of CLOCK_MONOTONIC, if available, in AnyEvent::Impl::Perl.
        - provide AnyEvent::post_detect and @AnyEvent::post_detect, which
          allows module authors to avoid forcing event loop detection.
          (used by Coro::AIO, Coro::BDB, Coro::AnyEvent for example).
        - remove coro backends: Coro now provides generic support for AnyEvent
          via Coro::AnyEvent.

3.3  Mon Apr 28 09:51:06 CEST 2008
        - added AnyEvent::Handle, AnyEvent::Socket and AnyEvent::Util modules.
        - fix a bug in the pure perl backend that kept watchers alive
          when multiple watchers were registered for the same fh/poll combo.
	- add a benchmark section showing AnyEvent overhead and comparing
          the different event loops with each other.
        - prefer pure perl over tk when autoprobing, as it's about as fast,
          but doesn't crash with many watchers.
	- declare Qt support non-experimental.
        - clarify the confusing section about the file descriptor being
          kept alive.
        - document the race between loading of an event module and
          child processes exiting.
        - support POE as "backend" (with some caveats, POE is not generic